Updated the html file

--- a/Lab2.html
+++ b/Lab2.html
@@ -7,7 +7,12 @@
     <link rel="stylesheet" href="Lab2.css">
 </head>
 <h1>Shopping List</h1>
+<div class="input-container">
+    <input type="text" id="itemList" placeholder="Add Item Here..">
+</input>
+<button id="addBtn">Add Item</button>
+</div>
 <body>
-    
+    <script src="script.js"></script>
 </body>
 </html>
