Updated CSS and JS file

--- a/Lab2.html
+++ b/Lab2.html
@@ -10,10 +10,12 @@
 
 <body>
     <h1>Shopping List</h1>
-    <div class="input-container">
-        <input type="text" id="itemList" placeholder="Add Item Here..">
-        <button id="addBtn">Add Item</button>
-        <button id="removeBtn">Remove Last Item</button>
+    <div class="input-section">
+        <div class="input-container">
+            <input type="text" id="itemList" placeholder="Add Item Here..">
+            <button id="addBtn">Add Item</button>
+            <button id="removeBtn">Remove Last Item</button>
+        </div>
     </div>
     <div class="unordered-list">
         <ul id="shoppingItems">
